@@ -40,6 +40,7 @@ import games.strategy.triplea.delegate.dataObjects.CasualtyDetails;
 import games.strategy.triplea.formatter.MyFormatter;
 import games.strategy.triplea.player.ITripleaPlayer;
 import games.strategy.triplea.ui.display.ITripleaDisplay;
+import games.strategy.triplea.util.UnitCategory;
 import games.strategy.triplea.util.UnitSeperator;
 import games.strategy.triplea.weakAI.WeakAI;
 import games.strategy.util.CompositeMatch;
@@ -105,6 +106,7 @@ public class MustFightBattle implements Battle, BattleStepStrings
     //for undoing moves
     private Map<Territory,Collection<Unit>> m_attackingFromMap = new HashMap<Territory,Collection<Unit>>();
     private List<Unit> m_attackingUnits = new ArrayList<Unit>();
+    private List<Unit> m_hitUnits = new ArrayList<Unit>();
     private Collection<Unit> m_attackingWaitingToDie = new ArrayList<Unit>();
     private Set<Territory> m_attackingFrom = new HashSet<Territory>();
     private Collection<Territory> m_amphibiousAttackFrom = new ArrayList<Territory>();
@@ -2486,13 +2488,11 @@ public class MustFightBattle implements Battle, BattleStepStrings
         
         
         private void rollDice(IDelegateBridge bridge)
-        {
+        {            
+            int attackingAirCount = Match.countMatches(m_attackingUnits, Matches.UnitIsAir);
             
-            int attackingAirCount = Match.countMatches(m_attackingUnits,
-                    Matches.UnitIsAir);
+            m_dice = DiceRoll.rollAA(attackingAirCount, m_attackingUnits, m_hitUnits, bridge,m_battleSite, m_data);
             
-            m_dice = DiceRoll.rollAA(attackingAirCount, bridge,
-                    m_battleSite, m_data);
         }
 
         private void selectCasualties(final IDelegateBridge bridge)
@@ -2502,8 +2502,13 @@ public class MustFightBattle implements Battle, BattleStepStrings
             getDisplay(bridge).notifyDice(m_battleID,  m_dice, SELECT_AA_CASUALTIES);
            
             Collection<Unit> attackable = Match.getMatches(m_attackingUnits, Matches.UnitIsAir);
-     
-            m_casualties = BattleCalculator.GetAACasualties(attackable, m_dice, bridge, m_defender, m_attacker, m_data, m_battleID, m_battleSite);
+            
+            if (games.strategy.triplea.Properties.getLow_Luck(m_data))
+            {
+            	m_casualties = m_hitUnits;
+            }
+            else
+            	m_casualties = BattleCalculator.GetAACasualties(attackable, m_dice, bridge, m_defender, m_attacker, m_data, m_battleID, m_battleSite);
         }
 
 
